--- a/select_count.html
+++ b/select_count.html
@@ -9,7 +9,11 @@
       function updatePhotoCountDisplay() {
         const options = document.querySelectorAll('.count-option');
         options.forEach((option, index) => {
-          option.style.opacity = index + 2 === photoCount ? '1' : '0.3';
+          if (index + 2 === photoCount) {
+            option.classList.add('selected');
+          } else {
+            option.classList.remove('selected');
+          }
         });
       }
 
@@ -46,7 +50,7 @@
     <main>
       <h1>안녕하세요. 스위치를 이용해 촬영 매수를 선택해주세요.</h1>
       <div class="options">
-        <div class="count-option" id="two" style="opacity: 1">2장</div>
+        <div class="count-option" id="two">2장</div>
         <div class="count-option" id="three">3장</div>
         <div class="count-option" id="four">4장</div>
       </div>
