헤더 로고 깨짐 문제 해결

--- a/select_count.html
+++ b/select_count.html
@@ -44,7 +44,7 @@
       </div>
       <div class="screen-header__row">
         <span class="screen-header__text">Photo Pi</span>
-        <img id="pi-logo" src="logo.svg" />
+        <img id="pi-logo" src="{{ url_for('static', filename='logo.svg') }}" />
       </div>
     </header>
     <main>
