--- a/display_photos.html
+++ b/display_photos.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>촬영된 사진</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-</head>
-<body>
-    <h1>촬영 완료</h1>
-    <div class="photo-container">
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style.css') }}"
+    />
+  </head>
+  <body>
+    <header class="screen-header">
+      <div class="screen-header__row">
+        <span class="screen-header__text">2024 Project</span>
+      </div>
+      <div class="screen-header__row">
+        <span class="screen-header__text">Photo Pi</span>
+        <img id="pi-logo" src="{{ url_for('static', filename='logo.svg') }}" />
+      </div>
+    </header>
+    <main>
+      <h1>촬영 완료</h1>
+      <div class="photo-container">
         {% for photo in photos %}
-            <img src="{{ url_for('static', filename=photo.split('static/')[-1]) }}" alt="Photo {{ loop.index }}">
+        <img
+          src="{{ url_for('static', filename=photo.split('static/')[-1]) }}"
+          alt="Photo {{ loop.index }}"
+        />
         {% endfor %}
-    </div>
-    <div class="message">한 번 더 촬영하기</div>
-</body>
+      </div>
+      <div class="message">한 번 더 촬영하기</div>
+    </main>
+  </body>
 </html>
