--- a/end.html
+++ b/end.html
@@ -9,6 +9,17 @@
     />
   </head>
   <body>
-    <div class="message">이용해주셔서 감사합니다 :)</div>
+    <header class="screen-header">
+      <div class="screen-header__row">
+        <span class="screen-header__text">2024 Project</span>
+      </div>
+      <div class="screen-header__row">
+        <span class="screen-header__text">Photo Pi</span>
+        <img id="pi-logo" src="{{ url_for('static', filename='logo.svg') }}" />
+      </div>
+    </header>
+    <main>
+      <div class="message">이용해주셔서 감사합니다 :)</div>
+    </main>
   </body>
 </html>
