--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -34,7 +34,12 @@
         setInterval(updateGraphs, 2000);
 
         window.onload = () => {
+            // 온도 차트
             const tempCtx = document.getElementById('temperatureChart').getContext('2d');
+            const tempGradient = tempCtx.createLinearGradient(0, 0, 0, 400);
+            tempGradient.addColorStop(0, 'rgba(255, 111, 152, 0.6)'); // FF6F98
+            tempGradient.addColorStop(1, 'rgba(255, 111, 152, 0)');
+
             window.temperatureChart = new Chart(tempCtx, {
                 type: 'line',
                 data: {
@@ -42,8 +47,9 @@
                     datasets: [{
                         label: '온도 (°C)',
                         data: temperatureData,
-                        borderColor: 'red',
-                        backgroundColor: 'rgba(255, 0, 0, 0.2)',
+                        borderColor: '#FF6F98',
+                        backgroundColor: tempGradient,
+			fill: true,
                     }]
                 },
                 options: {
@@ -52,7 +58,12 @@
                 }
             });
 
+            // 습도 차트
             const humCtx = document.getElementById('humidityChart').getContext('2d');
+            const humGradient = humCtx.createLinearGradient(0, 0, 0, 400);
+            humGradient.addColorStop(0, 'rgba(100, 162, 255, 0.6)'); // 64A2FF
+            humGradient.addColorStop(1, 'rgba(100, 162, 255, 0)');
+
             window.humidityChart = new Chart(humCtx, {
                 type: 'line',
                 data: {
@@ -60,8 +71,10 @@
                     datasets: [{
                         label: '습도 (%)',
                         data: humidityData,
-                        borderColor: 'blue',
-                        backgroundColor: 'rgba(0, 0, 255, 0.2)',
+                        borderColor: '#64A2FF',
+                        backgroundColor: humGradient,
+                        fill: true, 
+
                     }]
                 },
                 options: {
@@ -69,6 +82,33 @@
                     maintainAspectRatio: false,
                 }
             });
+
+            // 조도 차트 - 나중에 추가 가능
+            /*
+            const lightCtx = document.getElementById('lightChart').getContext('2d');
+            const lightGradient = lightCtx.createLinearGradient(0, 0, 0, 400);
+            lightGradient.addColorStop(0, 'rgba(255, 225, 92, 0.6)'); // FFE15C
+            lightGradient.addColorStop(1, 'rgba(255, 225, 92, 0)');
+
+            window.lightChart = new Chart(lightCtx, {
+                type: 'line',
+                data: {
+                    labels: labels,
+                    datasets: [{
+                        label: '조도 (lux)',
+                        data: lightData, // 조도 데이터는 나중에 추가
+                        borderColor: '#FFE15C',
+                        backgroundColor: lightGradient,
+                        fill: true, 
+
+                    }]
+                },
+                options: {
+                    responsive: false,
+                    maintainAspectRatio: false,
+                }
+            });
+            */
         };
     </script>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -86,8 +126,8 @@
     <main>
         <h1>{{ message }}</h1>
         <div class="canvas__row">
-            <canvas id="temperatureChart"></canvas>
-            <canvas id="humidityChart"></canvas>
+            <canvas id="temperatureChart" width="600" height="300"></canvas>
+            <canvas id="humidityChart" width="600" height="300"></canvas>
         </div>
     </main>
 </body>
