--- a/end.html
+++ b/end.html
@@ -19,7 +19,8 @@
       </div>
     </header>
     <main>
-      <div class="message">이용해주셔서 감사합니다 :)</div>
+      <img id="pi-logo__end" src="{{ url_for('static', filename='logo.svg') }}" />
+      <div class="message message__end">이용해주셔서 감사합니다 :)</div>
     </main>
   </body>
 </html>
