카운트다운 페이지 수정

--- a/countdown.html
+++ b/countdown.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8">
     <title>Countdown</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='style.css') }}"
-    />
-  </head>
-  <body>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
     <h1 id="countdown">{{ countdown_number }}</h1>
     <script>
-      let countdown = {{ countdown_number }};
-
-      function updateCountdown() {
-          if (countdown > 1) {
-              countdown--;
-              document.getElementById("countdown").innerText = countdown;
-          } else {
-              window.location.href = "{{ url_for('capture_photo') }}";
-          }
-      }
-
-      setInterval(updateCountdown, 1000);
+        let countdown = {{ countdown_number }};
+        
+        function updateCountdown() {
+            if (countdown > 1) {
+                countdown--;
+                document.getElementById("countdown").innerText = countdown;
+            } else {
+                window.location.href = "{{ url_for('capture_photo') }}";
+            }
+        }
+        
+        setInterval(updateCountdown, 1000);
     </script>
-  </body>
+</body>
 </html>
