내부 입장 판단 로직 수정 및 거리 동적으로 시각화

--- a/index.html
+++ b/index.html
@@ -6,18 +6,31 @@
     <script>
       function checkProximity() {
         fetch('/check_proximity')
-          .then((response) => response.json())
-          .then((data) => {
-            document.getElementById(
-              'distance'
-            ).innerText = `센서와의 거리: ${data.distance} cm`;
-            if (data.is_near) {
-              window.location.href = '/enter';
-            }
-          })
-          .catch((error) => console.error('Error:', error));
-      }
-      setInterval(checkProximity, 2000);
+            .then((response) => response.json())
+            .then((data) => {
+                const distance = data.distance;
+
+                // 거리 텍스트 업데이트
+                document.getElementById('distance').innerText = `센서와의 거리: ${distance} cm`;
+
+                // 바 너비 계산 및 업데이트
+                const barInner = document.querySelector('.sensor-bar__inner');
+                const percentage = Math.max(
+                    0,
+                    Math.min(((30 - distance) / 20) * 100, 100) // 30cm에서 10cm까지 20cm 구간을 100%로 계산
+                );
+                barInner.style.width = `${percentage}%`;
+
+                // 입장 기준 확인
+                if (data.is_near) {
+                    window.location.href = '/enter';
+                }
+            })
+            .catch((error) => console.error('Error:', error));
+        }
+
+
+      setInterval(checkProximity, 2000); // 2초 간격으로 상태 확인
 
       function checkLongPress() {
         fetch('/check_long_press')
@@ -33,7 +46,7 @@
       // 1초 간격으로 스위치 상태를 확인
       setInterval(checkLongPress, 1000);
     </script>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
     <header class="screen-header">
